 - Changed the respawn time of Copper Oreleaf from 36 minutes to 30 minutes.
 - Moved Change of Heart to the Magic skill category.
 - Presents now have a 50% drop chance on December 25th rather than the default 20%.

Balancing:
 - Nerfed the Rogue class's base HIT, EVA, and CRI by 1% each.
 - Increased price of Metal Wristbraces ★ from 180B to 300B

Bug Fixes:
 - Fixed a bug where the Suffering Soul had only 25% physical element damage reduction rather than the intended 50%.
 - Fixed a bug where life steal attributes with decimals would not be parsed correctly.
 - Just like I usually do, a huge amount of minor bugs, textual errors, and visual issues were corrected in this release.

OUTRO

Yours truly,
Andrew

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
                             ALPHA 14.6 CHANGELOG
- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
Alpha 14.6 (12/22/2021)
Current Level Cap: 20
- - - - - - - - - - - - -
Fixed a game-breaking bug where fresh downloads of the game would immediately crash upon attempting to save.

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
                             ALPHA 14.5 CHANGELOG
- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
Alpha 14.5 (12/21/2021)
Current Level Cap: 20
- - - - - - - - - - - - -
This is a very technical update, mainly serving to continue improving the gameplay experience and make a few small QoL changes.

Additions:
 - Added actual descriptions to vanity items. They will show the set they are a part of, as well as a short summary of what the outfit looks like.
 - Re-added the category separators on the options menu. Additionally, 2 new options were added:
  ~ Disable Old Save Patching: Disables the automatic patching of old saves when updating.
  ~ Equipping Item Stays on Equip Window: When enabled, equipping an item will not return to the equipment slots window.