@@ -6,4 +6,5 @@ PluginManager.setup($plugins);
 
 window.onload = function() {
     SceneManager.run(Scene_Boot);
+    $droppeditems = [] // Added to initialize MOG/YEP VA Drops in an easy to find location.
 };
