@@ -45,6 +45,7 @@ var $plugins =
 {"name":"YEP_DamageCore","status":true,"description":"v1.08 Expand the control you have over the game's damage\ncalculation with more features and effects.","parameters":{"---Damage Cap---":"","Enable Cap":"true","Maximum Damage":"999999","Maximum Healing":"999999","---Damage Steps---":"","Damage Step 1":"baseDamage = this.modifyBaseDamage(value, baseDamage, target);","Damage Step 2":"baseDamage *= this.calcElementRate(target);","Damage Step 3":"","Damage Step 4":"","Damage Step 5":"","Damage Step 6":"critical = this.modifyCritical(critical, baseDamage, target);","Damage Step 7":"target.result().critical = critical;","Damage Step 8":"value = baseDamage;","Damage Step 9":"","Damage Step 10":"if (baseDamage > 0) {","Damage Step 11":"value = this.applyDamageRate(value, baseDamage, target);","Damage Step 12":"","Damage Step 13":"","Damage Step 14":"","Damage Step 15":"","Damage Step 16":"","Damage Step 17":"","Damage Step 18":"}","Damage Step 19":"","Damage Step 20":"if (baseDamage < 0) {","Damage Step 21":"value = this.applyHealRate(value, baseDamage, target);","Damage Step 22":"","Damage Step 23":"","Damage Step 24":"","Damage Step 25":"","Damage Step 26":"","Damage Step 27":"","Damage Step 28":"}","Damage Step 29":"","Damage Step 30":"if (critical) {","Damage Step 31":"value = this.applyCriticalRate(value, baseDamage, target);","Damage Step 32":"","Damage Step 33":"","Damage Step 34":"","Damage Step 35":"","Damage Step 36":"","Damage Step 37":"","Damage Step 38":"}","Damage Step 39":"","Damage Step 40":"if (this.isPhysical()) {","Damage Step 41":"value = this.applyPhysicalRate(value, baseDamage, target);","Damage Step 42":"","Damage Step 43":"","Damage Step 44":"","Damage Step 45":"","Damage Step 46":"","Damage Step 47":"value = this.applyFlatPhysical(value, baseDamage, target);","Damage Step 48":"}","Damage Step 49":"","Damage Step 50":"if (this.isMagical()) {","Damage Step 51":"value = this.applyMagicalRate(value, baseDamage, target);","Damage Step 52":"","Damage Step 53":"","Damage Step 54":"","Damage Step 55":"","Damage Step 56":"","Damage Step 57":"value = this.applyFlatMagical(value, baseDamage, target);","Damage Step 58":"}","Damage Step 59":"","Damage Step 60":"if (baseDamage > 0) {","Damage Step 61":"value = this.applyFlatDamage(value, baseDamage, target);","Damage Step 62":"","Damage Step 63":"","Damage Step 64":"","Damage Step 65":"","Damage Step 66":"","Damage Step 67":"","Damage Step 68":"}","Damage Step 69":"","Damage Step 70":"if (baseDamage < 0) {","Damage Step 71":"value = this.applyFlatHeal(value, baseDamage, target);","Damage Step 72":"","Damage Step 73":"","Damage Step 74":"","Damage Step 75":"","Damage Step 76":"","Damage Step 77":"","Damage Step 78":"}","Damage Step 79":"","Damage Step 80":"if (critical) {","Damage Step 81":"value = this.applyFlatCritical(value, baseDamage, target);","Damage Step 82":"","Damage Step 83":"","Damage Step 84":"","Damage Step 85":"","Damage Step 86":"","Damage Step 87":"","Damage Step 88":"}","Damage Step 89":"","Damage Step 90":"value = this.applyVariance(value, item.damage.variance);","Damage Step 91":"","Damage Step 92":"","Damage Step 93":"","Damage Step 94":"","Damage Step 95":"value = this.applyGuard(value, target);","Damage Step 96":"","Damage Step 97":"","Damage Step 98":"","Damage Step 99":"value = this.applyFlatGlobal(value, baseDamage, target);","Damage Step 100":"value = this.applyMinimumDamage(value, baseDamage, target);"}},
 {"name":"YEP_X_CriticalControl","status":true,"description":"v1.06 (Requires YEP_DamageCore.js) Control over critical\nhits have been added.","parameters":{"Critical Rate Formula":"rate = user.cri * (1 - target.cev);","Critical Multplier Formula":"value *= 2.0 * (Math.max(1.0, user.luk / 40));","Flat Critical Formula":""}},
 {"name":"YEP_ElementCore","status":true,"description":"v1.02 Manage the way elements work in this game from\nabsorbing elements, reflecting elements, and more!","parameters":{"Multi-Element Rulings":"2"}},
+{"name":"MOG_TrPopUpBattle","status":true,"description":"(v1.0) Apresenta os ícones dos tesouros após o inimigo morrer.","parameters":{"Drop Item Real Time":"true","Animation Type":"0","Fade Duration":"20","Scale":"0.8"}},
 {"name":"YEP_ExtraEnemyDrops","status":true,"description":"v1.09 Allows your enemies to drop more than just three\r\nitems as per the editor's limit.","parameters":{}},
 {"name":"YEP_ForceAdvantage","status":true,"description":"v1.01 This plugin allows you to force pre-emptive,\nsurprise, or normal initiatives for battles.","parameters":{"Neutral Event":"0","Pre-Emptive Event":"0","Surprise Event":"0"}},
 {"name":"YEP_HitAccuracy","status":true,"description":"v1.04 This plugin alters the nature of hit accuracy for\r\nRPG Maker MV by giving control to its formula.","parameters":{"---Formula---":"","Accuracy Formula":"skillHitRate * (userHitRate - targetEvadeRate)","Evade Formula":"0","---User Hit Rate---":"","User Physical Hit":"user.hit","User Magical Hit":"1.00","User Certain Hit":"1.00","---Target Evade Rate---":"","Target Physical Evade":"target.eva","Target Magical Evade":"target.mev","Target Certain Evade":"0.00"}},
@@ -221,7 +222,6 @@ var $plugins =
 {"name":"AP_SaveVersion","status":true,"description":"","parameters":{}},
 {"name":"--------------------","status":false,"description":"------------------------------------------------------------","parameters":{}},
 {"name":"--------------------","status":false,"description":"------------------------------------------------------------","parameters":{}},
-{"name":"MOG_TrPopUpBattle","status":true,"description":"(v1.0) Apresenta os ícones dos tesouros após o inimigo morrer.","parameters":{"Drop Item Real Time":"true","Animation Type":"0","Fade Duration":"20","Scale":"0.8"}},
 {"name":"--------------------","status":false,"description":"------------------------------------------------------------","parameters":{}},
 {"name":"MOG_TitleHimawari","status":true,"description":"(v1.0) Cena de titulo animado com personagens.","parameters":{"Char Number":"13","Char X-Axis":"0","Char Y-Axis":"-50","Flower X-Axis":"0","Flower Y-Axis":"0","Rotation":"false","Rotation Time":"300"}},
 {"name":"MOG_MenuParticles","status":true,"description":"(v1.1) Adiciona partículas nas cenas menu.","parameters":{"Number of Particles":"25","Disable Scenes":"Scene_Test1,Scene_Test2,Scene_Test3","Unique Particles":"false","X-Axis Speed":"0","Y-Axis Speed":"-1","Rotation Speed":"1","Blend Mode":"1"}},
