@@ -225,7 +225,9 @@ SpriteEnemyTrP.prototype.gainDropItems = function() {
     var items = this._enemy._treasure.item;
     items.forEach(function(item) {
         $gameParty.gainItem(item, 1);
+		$droppeditems.push(item) // Edit: Added to show exact number of drops.
     });
+	console.log("From MOG: " + $droppeditems.length) // Edit: Added to show battle total in console.
 };
 
 //==============================
